--- a/WebDashboardv2/Views/ProcessCards/Index.cshtml
+++ b/WebDashboardv2/Views/ProcessCards/Index.cshtml
@@ -3,86 +3,103 @@
     ViewData["Title"] = "Process Cards";
 
 }
-@{ 
+@{
     List<WebDashboardv2.Model.MinProcessCard> ProcessCards = (List<WebDashboardv2.Model.MinProcessCard>)ViewData["ProcessCards"];
     string ProcessCardClass = (string)ViewData["CardClass"];
-    string CanEdit = ViewData["UserAccess"].ToString().ToLower(); 
+    string CanEdit = ViewData["UserAccess"].ToString().ToLower();
 }
 <head>
     <style>
-        .update-label{
-            display:none;
+        .update-label {
+            display: none;
         }
     </style>
 </head>
 
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="ibox float-e-margins">
-                                <div class="ibox-title">
-                                    <h5>@ProcessCardClass Process Cards</h5>
-                                </div>
-                                <div class="ibox-content">
-                                    <input type="text" class="form-control input-sm m-b-xs" id="filter"
-                                           placeholder="Search Process Cards">
+<div class="row">
+    <div class="col-lg-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+                <h5>@ProcessCardClass Process Cards</h5>
+            </div>
+            <div class="ibox-content">
+                <input type="text" class="form-control input-sm m-b-xs" id="filter"
+                       placeholder="Search Process Cards">
 
-                                    <table class="footable table toggle-circle table-stripped" data-filter-min="0" data-page-size="25" data-filter=#filter>
-                                        <thead>
-                                            <tr>
-                                                <th width="125">Product</th>
-                                                <th width="125" >Department</th>
-                                                <th width="50">PDF</th>
-                                                <th width="50" >Quality Alerts</th>
-                                                <th width="50" >Quality Concerns</th>
-                                                @if (bool.Parse(CanEdit))
-                                                {
-                                                <th width="50" align="center">EDIT</th>
-                                                <th data-hide="all">Details</th>
-                                               }
-                                              
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-@foreach (var card in ProcessCards)
-{
-                                            <tr class="gradeX" id="@card.ID-main">
-                                                <td>@card.ProductName</td>
-                                                <td >@card.ProcessCardType</td>
-                                                <td ><a href='@string.Format("http://ncwebtest:8001/api/pdf/{0}", @card.ID)' ><i class="fa fa-file-pdf-o"/></a></td>
-                                                <td ><a asp-controller="QualityAlerts", asp-action="Index" asp-route-product="@card.ProductName"><i class="fa fa-exclamation-circle" /></a></td>
-                                                <td ><a asp-controller="QualityConcerns" , asp-action="Index" asp-route-id="@card.ID"><i class="fa fa-question-circle" /></a></td>
-                                                @if (bool.Parse(CanEdit))
-                                                {
-		                                            <td ><a id="@card.ID-edit" asp-controller="ProcessCards" asp-action="Edit" asp-route-id="@card.ID" class="edit-button"><i class="fa fa-edit"/></a></td>
-                                                }
-                                                <td>
-                                                <div id="@card.ID-details">
-                                                   </div>@Html.Partial("_EditDetails") </td>
-                                            </tr>
-}
-                                        </tbody>
-                                        <tfoot>
-                                            <tr>
-                                                <td colspan="5">
-                                                    <ul class="pagination pull-right"></ul>
-                                                </td>
-                                            </tr>
-                                        </tfoot>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
+                <table class="footable table toggle-circle table-stripped" data-filter-min="0" data-page-size="25" data-filter=#filter>
+                    <thead>
+                        <tr>
+                            <th width="125">Product</th>
+                            <th width="125">Department</th>
+                            <th width="50">PDF</th>
+                            <th width="50">Quality Alerts</th>
+                            <th width="50">Quality Concerns</th>
+                            @if (bool.Parse(CanEdit))
+                            {
+                                <th width="50" align="center">EDIT</th>
+                                                <th data-hide="all"></th>
+                                                <th data-hide="all"></th>
+                            }
 
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var card in ProcessCards)
+                        {
+                            <tr class="gradeX" id="@card.ID-main">
+                                <td>@card.ProductName</td>
+                                <td>@card.ProcessCardType</td>
+                                <td><a class="btn btn-primary btn-xs" href='@string.Format("http://ncwebtest:8001/api/pdf/{0}", @card.ID)'>View <i class="fa fa-file-pdf-o" /></a></td>
+                                <td>
+                                    <a asp-controller="QualityAlerts" asp-action="Partial90d" asp-route-product="@card.ProductName" id="@card.ProductName-90d" name="@card.ID-cardID" class="btn show90d btn-primary btn-xs">
+                                        Show 
+                                        <i class="fa fa-arrow-circle-down"></i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a asp-controller="QualityConcerns" asp-action="PartialConcerns" asp-route-product="@card.ProductName" id="@card.ProductName-concerns" name="@card.ID-cardID" class="btn show90d btn-primary btn-xs">
+                                        Show 
+                                        <i class="fa fa-arrow-circle-down"></i>
+                                    </a>
+                                </td>
+                                @if (bool.Parse(CanEdit))
+                                {
+                                    <td ><a id="@card.ID-edit" asp-controller="ProcessCards" asp-action="Edit" asp-route-id="@card.ID" class="btn btn-primary btn-xs edit-button">Edit <i class="fa fa-edit" ></i></a></td>
+                                                    <td>
+                                                        <div id="@card.ID-details">
+                                                        </div>
+                                                    </td>
+                                }
+                                <td>
+                                    <div id="@card.ProductName-details"></div>
+                                </td>
 
 
+                            </tr>
+                        }
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5">
+                                <ul class="pagination pull-right"></ul>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
 
-    
+
+
+
+
+
 @section Styles {
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/footable/css/footable.core.css" />
@@ -105,7 +122,7 @@
     </script>
 
 
-                <script type="text/javascript">
+    <script type="text/javascript">
                     $(document).ready(function () {
 
                         // Add slimscroll to element
@@ -118,19 +135,25 @@
                             evt.stopPropagation();
                             var a = $(this).attr("id").replace("edit", "details");
                             url = $(this).attr('href');
-                            $("div[id='" + a + "']").load(url, function () { 
+                            $("div[id='" + a + "']").load(url, function () {
                                 var a = $(this).attr("id").replace("details", "main");
                                 $("tr[id='" + a + "']").trigger('footable_toggle_row');
                             });
-                            
-
-                            
-                            
+                        });
+                        $('.show90d').click(function (evt) {
+                            evt.preventDefault();
+                            evt.stopPropagation();
+                            var product = evt.currentTarget.name.replace('-cardID', '');
+                            console.log(product);
+                            url = $(this).attr('href');
+                            $('#' + product + '-details').load(url, function () {
+                                $('#' + product + '-main').trigger('footable_toggle_row');
+                            });
                         });
                     });
 
 
-                </script>
-            }
+    </script>
+}
 
 
