--- a/WebDashboardv2/Views/QualityAlerts/ViewAll.cshtml
+++ b/WebDashboardv2/Views/QualityAlerts/ViewAll.cshtml
@@ -3,7 +3,7 @@
 }
 
 @{
-   WebDashboardv2.Model.IProductsModel Products = (WebDashboardv2.Model.IProductsModel)ViewData["Products"];
+    WebDashboardv2.Model.IProductsModel Products = (WebDashboardv2.Model.IProductsModel)ViewData["Products"];
     WebDashboardv2.Model.IQualityAlertsModel Alerts = (WebDashboardv2.Model.IQualityAlertsModel)ViewData["Alerts"];
 }
 <head>
@@ -16,21 +16,21 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="ibox float-e-margins">
+        <div class="ibox no-margins">
             <div class="ibox-title">
                 <h5>Quality Alerts</h5>
             </div>
             <div class="ibox-content">
                 <input type="text" class="form-control input-sm m-b-xs" id="filter"
-                       placeholder="Search Process Cards">
+                       placeholder="Search Alerts">
 
-                <table class="footable table table-stripped" data-show-toggle="false" data-filter-min="0" data-page-size="25" data-filter=#filter>
+                <table class="footable table table-stripped"  data-filter-min="0" data-page-size="25" data-filter=#filter>
                     <thead>
-                        <tr>
+                        <tr id="alertsTableHeaders">
                             <th width="125">Product</th>
                             <th width="125">Last 90 Days</th>
                             <th width="50">All Time</th>
-                            <th data-hide="all">Details</th>
+                            <th data-hide="all"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -40,17 +40,26 @@
                             <tr class="gradeX" id="@product.Product-main">
                                 <td>@product.Product</td>
 
-                                <td>@alerts.Where(x => x.AlertDate >= DateTime.Now.AddDays(-90)).Count() <i class="fa fa-arrow-circle-down"></i></td>
                                 <td>
-                                   @alerts.Count() <i class="fa fa-arrow-circle-down"></i>
+                                    @alerts.Where(x => x.AlertDate >= DateTime.Now.AddDays(-90)).Count()
+                                    <a asp-controller="QualityAlerts" asp-action="Partial90d" asp-route-product="@product.Product" id="@product.Product-90d" class="btn show90d btn-primary btn-xs">
+                                        Show
+                                        <i  class="fa fa-arrow-circle-down"></i>
+                                    </a>
                                 </td>
                                 <td>
-                                    <div class="col-lg-12">
-                                       <div>@Html.Partial("_QualityAlertsByProduct")</div>
-                                    </div>
+                                    @alerts.Count()
+                                    <a asp-controller="QualityAlerts" asp-action="PartialAllTime" asp-route-product="@product.Product"
+                                       id="@product.Product-allTime" class="btn btn-primary btn-xs showAllTime">
+                                        Show
+                                        <i class="fa fa-arrow-circle-down"></i>
+                                    </a>
+                                </td>
+                                <td >
+                                    <div id="@product.Product-details"></div>
                                 </td>
                             </tr>
-                                        }
+                        }
                     </tbody>
                     <tfoot>
                         <tr>
@@ -83,6 +92,27 @@
         $(document).ready(function () {
 
             $('.footable').footable();
+            var show90d = false;
+            var showAllTime = false;
+
+            $('.show90d').click(function (evt) {
+                evt.preventDefault();
+                evt.stopPropagation();
+                var product = evt.currentTarget.id.replace('-90d', '');
+                url = $(this).attr('href');
+                $('#' + product + '-details').load(url, function () {
+                    $('#'+product+'-main').trigger('footable_toggle_row');
+                });
+            });
+            $('.showAllTime').click(function (evt) {
+                evt.preventDefault();
+                evt.stopPropagation();
+                var product = evt.currentTarget.id.replace('-allTime', '');
+                url = $(this).attr('href');
+                $('#' + product + '-details').load(url, function () {
+                    $('#' + product + '-main').trigger('footable_toggle_row');
+                });
+            });
         });
     </script>
-    }
+}
