--- a/WebDashboardv2/Views/QualityAlerts/Create.cshtml
+++ b/WebDashboardv2/Views/QualityAlerts/Create.cshtml
@@ -2,73 +2,188 @@
 @{
     ViewData["Title"] = "Create";
     WebDashboardv2.Model.IProductsModel products = (WebDashboardv2.Model.IProductsModel)ViewData["Products"];
-    
+    WebDashboardv2.Model.IProductAlerts qualityAlert = (WebDashboardv2.Model.IQualityAlertsModel)ViewData["AlertToCopy"];
+
 }
 
 
- @*
-     int ID { get; set; }
-     string Product { get; set; }
-     string Title { get; set; }
-     string Customer { get; set; }
-     string Comments { get; set; }
-     string ActionRequired { get; set; }
-     DateTime AlertDate { get; set; }
-     int Quantity { get; set; }
-     string AuthorizedBy { get; set; }
-     string Image1Path { get; set; }
-     string Image2Path { get; set; }
-     string Image3Path { get; set; }
-     string Image4Path { get; set; }
-     string TemplateTypePath { get; set; }
-     int RepeatCount { get; set; }
-     string RootCause { get; set; }
-     List<string> AffectedDepartments { get; set; }
-     *@
+@*
+    int ID { get; set; }
+    string Product { get; set; }
+    string Title { get; set; }
+    string Customer { get; set; }
+    string Comments { get; set; }
+    string ActionRequired { get; set; }
+    DateTime AlertDate { get; set; }
+    int Quantity { get; set; }
+    string AuthorizedBy { get; set; }
+    string Image1Path { get; set; }
+    string Image2Path { get; set; }
+    string Image3Path { get; set; }
+    string Image4Path { get; set; }
+    string TemplateTypePath { get; set; }
+    int RepeatCount { get; set; }
+    string RootCause { get; set; }
+    List<string> AffectedDepartments { get; set; }
+*@
 
-    <h2>Create</h2>
-    <div class="col-lg-6">
-        <div class="form-group">
-            <label class="font-normal">Product </label>
-            <select data-placeholder="Choose Product" class="chosen-select" tabindex="4">
-                @foreach (var product in products.Products)
-            {
-                    <option value="@product.Product">@product.Product</option>
-                }
-            </select>
-            <label class="font-normal">Affected Departments</label>
-            <select data-placeholder="Choose Departments" class="chosen-select" multiple tabindex="4">
-                @foreach (WebDashboardv2.Model.Departments dept in Enum.GetValues(typeof(WebDashboardv2.Model.Departments)))
-            {
-                    <option value="@dept">@dept.ToString()</option>
-                }
-            </select>
-            
+<div class="row">
+    <div class="col-lg-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+                <h2>Create New Alert</h2>
+            </div>
+            <div class="ibox-content col-lg-12">
+                <div class="col-lg-8">
+                    <div class="form-group">
+                        <div>
+                            <label class="col-sm-2 font-normal">Product </label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <select data-placeholder="Choose Product" class=" chosen-select" tabindex="4">
+                                    @foreach (var product in products.Products)
+                                    {
+                                        <option value="@product.Product">@product.Product</option>
+                                    }
+                                </select>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Alert Title</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <textarea class="txtArea" name="Title">@if (qualityAlert != null) { @qualityAlert.ProductAlerts.}
+                                {
+                                    /**/
+                                }</textarea>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Depts</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <select data-placeholder="Choose Departments" class="chosen-select" chosen-select" multiple tabindex="4">
+                                    @foreach (WebDashboardv2.Model.Departments dept in Enum.GetValues(typeof(WebDashboardv2.Model.Departments)))
+                                    {
+                                        <option value="@dept">@dept.ToString()</option>
+                                    }
+                                </select>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Description</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <textarea class="txtArea" name="ActionRequired"></textarea>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Action Required</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <textarea class="txtArea" name="ActionRequired"></textarea>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Comments</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <textarea class="txtArea" name="Comments"></textarea>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Quantity</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <input type="text" class="txtArea" name="Quantity" />
+                            </div>
+                        </div>
+
+                        <div class="clearfix"></div>
+                        <div>
+                            <label class="col-sm-2 font-normal">Root Cause</label>
+                            <div class="p-xxs col-sm-4 col-lg-10">
+                                <textarea class="txtArea" name="RootCause"></textarea>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div>
+                        <label class="col-sm-2 font-normal">Image 1</label>
+                        <div class="p-xxs col-sm-4 col-lg-10">
+                            <input type="file" class="txtArea" name="Image1" />
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div>
+                        <label class="col-sm-2 font-normal">Image 2</label>
+                        <div class="p-xxs col-sm-4 col-lg-10">
+                            <input type="file" class="txtArea" name="Image2" />
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div>
+                        <label class="col-sm-2 font-normal">Image 3</label>
+                        <div class="p-xxs col-sm-4 col-lg-10">
+                            <input type="file" class="txtArea" name="Image3" />
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div>
+                        <label class="col-sm-2 font-normal">Image 4</label>
+                        <div class="p-xxs col-sm-4 col-lg-10">
+                            <input type="file" class="txtArea" name="Image4" />
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+            <div class="ibox-footer col-lg-12">
+                <div></div>
+                <input type="submit" class="pull-right btn btn-primary btn-xs" value="Submit"/>
+            </div>
         </div>
-
-
     </div>
+</div>
 
 
-    @section Styles {
-        <environment names="Development">
-            <link rel="stylesheet" href="~/lib/chosen/bootstrap-chosen.css" />
-        </environment>
-        <environment names="Staging,Production">
-            <link rel="stylesheet" href="~/lib/chosen/bootstrap-chosen.css" />
-        </environment>
-    }
+@section Styles {
+    <environment names="Development">
+        <link rel="stylesheet" href="~/lib/chosen/bootstrap-chosen.css" />
+    </environment>
+    <environment names="Staging,Production">
+        <link rel="stylesheet" href="~/lib/chosen/bootstrap-chosen.css" />
+    </environment>
+}
 
-    @section Scripts {
-        <environment names="Development">
-            <script src="~/lib/chosen/chosen.jquery.js"></script>
-        </environment>
-        <environment names="Staging,Production">
-            <script src="~/lib/chosen/chosen.jquery.js"></script>
-        </environment>
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $('.chosen-select').chosen();
+@section Scripts {
+    <environment names="Development">
+        <script src="~/lib/chosen/chosen.jquery.js"></script>
+    </environment>
+    <environment names="Staging,Production">
+        <script src="~/lib/chosen/chosen.jquery.js"></script>
+    </environment>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.chosen-select').chosen();
+
+        });
+        $(document).ready(function () {
+            resizeChosen();
+            jQuery(window).on('resize', resizeChosen);
+        });
+
+        function resizeChosen() {
+            $(".chosen-container").each(function () {
+                $(this).attr('style', 'width: 100%');
+
             });
-        </script>
-    }
+            $(".txtArea").each(function () {
+                $(this).attr('style', 'width: 100%');
+
+            });
+        }
+
+    </script>
+}
