--- a/WebDashboardv2/Views/QualityAlerts/Create.cshtml
+++ b/WebDashboardv2/Views/QualityAlerts/Create.cshtml
@@ -2,36 +2,43 @@
 @{
     ViewData["Title"] = "Create";
     WebDashboardv2.Model.IProductsModel products = (WebDashboardv2.Model.IProductsModel)ViewData["Products"];
-    WebDashboardv2.Model.IProductAlerts qualityAlert = (WebDashboardv2.Model.IQualityAlertsModel)ViewData["AlertToCopy"];
+    WebDashboardv2.Model.IProductAlerts qualityAlert = (WebDashboardv2.Model.IProductAlerts)ViewData["AlertToCopy"];
 
 }
 
+<head>
+    <style>
+        .imgHolder {
+            position: relative;
+            
+        }
+        .imgHolder img {
+            width: 200px;
+        }
+        .imgHolder span {
+            position: absolute;
+            right: 25px;
+            top: 10px;
+            
+            
+        }
+    </style>
+</head>
 
-@*
-    int ID { get; set; }
-    string Product { get; set; }
-    string Title { get; set; }
-    string Customer { get; set; }
-    string Comments { get; set; }
-    string ActionRequired { get; set; }
-    DateTime AlertDate { get; set; }
-    int Quantity { get; set; }
-    string AuthorizedBy { get; set; }
-    string Image1Path { get; set; }
-    string Image2Path { get; set; }
-    string Image3Path { get; set; }
-    string Image4Path { get; set; }
-    string TemplateTypePath { get; set; }
-    int RepeatCount { get; set; }
-    string RootCause { get; set; }
-    List<string> AffectedDepartments { get; set; }
-*@
 
 <div class="row">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h2>Create New Alert</h2>
+                @if (qualityAlert != null)
+                {
+                    <h5>Create Repeat Alert</h5>
+                }
+                else
+                {
+                    <h5>Create New Alert</h5>
+                }
+                
             </div>
             <div class="ibox-content col-lg-12">
                 <div class="col-lg-8">
@@ -40,9 +47,21 @@
                             <label class="col-sm-2 font-normal">Product </label>
                             <div class="p-xxs col-sm-4 col-lg-10">
                                 <select data-placeholder="Choose Product" class=" chosen-select" tabindex="4">
+                                    <option value="">Choose Product</option>
                                     @foreach (var product in products.Products)
                                     {
-                                        <option value="@product.Product">@product.Product</option>
+                                        if (qualityAlert != null)
+                                        {
+                                            if (product.Product == qualityAlert.Product)
+                                            {
+                                                <option selected value="@product.Product">@product.Product</option>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <option value="@product.Product">@product.Product</option>
+                                        }
+
                                     }
                                 </select>
                             </div>
@@ -51,10 +70,8 @@
                         <div>
                             <label class="col-sm-2 font-normal">Alert Title</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <textarea class="txtArea" name="Title">@if (qualityAlert != null) { @qualityAlert.ProductAlerts.}
-                                {
-                                    /**/
-                                }</textarea>
+                                <textarea class="txtArea" name="Title">@if (qualityAlert != null) { @qualityAlert.Title }
+                               </textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
@@ -64,7 +81,19 @@
                                 <select data-placeholder="Choose Departments" class="chosen-select" chosen-select" multiple tabindex="4">
                                     @foreach (WebDashboardv2.Model.Departments dept in Enum.GetValues(typeof(WebDashboardv2.Model.Departments)))
                                     {
-                                        <option value="@dept">@dept.ToString()</option>
+                                        if (qualityAlert != null)
+                                        {
+                                            if (qualityAlert.Departments.HasFlag(dept))
+                                            {
+                                                <option selected value="@dept">@dept.ToString()</option>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <option value="@dept">@dept.ToString()</option>
+                                        }
+
+
                                     }
                                 </select>
                             </div>
@@ -73,28 +102,28 @@
                         <div>
                             <label class="col-sm-2 font-normal">Description</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <textarea class="txtArea" name="ActionRequired"></textarea>
+                                <textarea class="txtArea" name="Description">@if (qualityAlert != null) { @qualityAlert.Description }</textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                         <div>
                             <label class="col-sm-2 font-normal">Action Required</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <textarea class="txtArea" name="ActionRequired"></textarea>
+                                <textarea class="txtArea" name="ActionRequired">@if (qualityAlert != null) { @qualityAlert.ActionRequired }</textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                         <div>
                             <label class="col-sm-2 font-normal">Comments</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <textarea class="txtArea" name="Comments"></textarea>
+                                <textarea class="txtArea" name="Comments">@if (qualityAlert != null) { @qualityAlert.Comments }</textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                         <div>
                             <label class="col-sm-2 font-normal">Quantity</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <input type="text" class="txtArea" name="Quantity" />
+                                <input type="text" class="txtArea" name="Quantity" value="@if (qualityAlert != null) { @qualityAlert.Quantity }" />
                             </div>
                         </div>
 
@@ -102,7 +131,7 @@
                         <div>
                             <label class="col-sm-2 font-normal">Root Cause</label>
                             <div class="p-xxs col-sm-4 col-lg-10">
-                                <textarea class="txtArea" name="RootCause"></textarea>
+                                <textarea class="txtArea" name="RootCause">@if (qualityAlert != null) { @qualityAlert.RootCause }</textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
@@ -136,6 +165,35 @@
                             <input type="file" class="txtArea" name="Image4" />
                         </div>
                     </div>
+
+                    <div class="p-xxs col-sm-6">
+                        <button class="p-xxs imgHolder col-sm-12">
+                            <img src="~/images/9650279.jpg" />
+                            <span class="label"><strong>Template #1</strong></span>
+                        </button>
+                    </div>
+
+                    <div class="p-xxs col-sm-6">
+                        <button class="p-xxs imgHolder col-sm-12">
+                            <img src="~/images/9650279.jpg" />
+                            <span class="label"><strong>Template #1</strong></span>
+                        </button>
+                    </div>
+                    <div class="p-xxs col-sm-6">
+                        <button class="p-xxs imgHolder col-sm-12">
+                            <img src="~/images/9650279.jpg" />
+                            <span class="label"><strong>Template #1</strong></span>
+                        </button>
+                    </div>
+                    <div class="p-xxs col-sm-6">
+                        <button class="p-xxs imgHolder col-sm-12">
+                            <img src="~/images/9650279.jpg" />
+                            <span class="label"><strong>Template #1</strong></span>
+                        </button>
+                    </div>
+  
+
+                   
                     <div class="clearfix"></div>
                 </div>
             </div>
@@ -172,6 +230,8 @@
         $(document).ready(function () {
             resizeChosen();
             jQuery(window).on('resize', resizeChosen);
+
+            
         });
 
         function resizeChosen() {
