--- a/WebDashboardv2/Views/Shared/_Navigation.cshtml
+++ b/WebDashboardv2/Views/Shared/_Navigation.cshtml
@@ -78,7 +78,7 @@
                 </a>
                 <ul class="nav nav-second-level collapse @Html.IsSelected(controller: "QualityAlerts", cssClass: "in")">
                     <li><a asp-controller="QualityAlerts" asp-action="CreateNew">Create New Alert</a></li>
-                    <li><a asp-controller="QualityAlerts" asp-action="ViewCurrent">Work With Quality Alerts</a></li>
+                    <li><a asp-controller="QualityAlerts" asp-action="ViewCurrent">Create Alert Training Package</a></li>
                     <li><a asp-controller="QualityAlerts" asp-action="ViewAll">Quality Alert Records</a></li>
                 </ul>
             </li>
